--- a/coptic/crum/styles/styles.css
+++ b/coptic/crum/styles/styles.css
@@ -2,7 +2,7 @@ body {
 	font-size: 16px;
 	color: gray;
 	background: #111;
-	font-family: "Noto Sans", sans-serif;
+	font-family: "Noto Sans";
 	margin: 1em;
 	//outline: 1px solid white;
 	//line-height: 2rem;
@@ -62,27 +62,24 @@ body {
 	unicode-range: U+0590–05FF;
 }
 
+@font-face {
+	font-family: rk_sans-serif;
+	src: local("Arial");
+	unicode-range: U+2020;
+}
+
 .abbr {
 	color: lightblue;
 }
 
 .coptic {
 	font-family: rk_coptic;
-	//color: lightgreen;
 }
 
-
-.found::marker {
-	//content: "✔  ";
-	//color: lightgreen;
-	//font-size: 1em;
-	//scale: 2;
-}
-
-
-.found {
-	list-style-type: "✔  ";
-	color: green;
+.arabic {
+	font-family: rk_arabic;
+	color: gold;
+	unicode-bidi: plaintext;
 }
 
 .source {
@@ -90,106 +87,73 @@ body {
 	text-decoration: none;
 }
 
-li {
-	position: relative;
-	//left: 0px;
-	//top: 0px;
-	//line-height: 20px;
-	//padding-bottom: 5px;
-}
-
-li a {
-	//position: absolute;
-	//left: -25px;
-	//top: 0px;
-	//line-height: 25px;
-	//padding-bottom: 5px;
-}
-
 li a:before {
 	content: "[↵]";
 }
 
-li a[href^="https://archive.org/"]:before {
+li a[href^="https://archive.org/"]:before,
+li a[href^="https://books.google.com/"]:before,
+li a[href^="https://babel.hathitrust.org/"]:before,
+li a[href^="https://www.jstor.org/"]:before,
+li a[href^="https://www.scribd.com/"]:before,
+li a[href^="https://digitale-sammlungen.ulb.uni-bonn.de/"]:before,
+li a[href^="https://gallica.bnf.fr/"]:before {
 	content: "";
+	display: inline-block;
+	vertical-align: middle;
+}
+
+li a[href^="https://archive.org/"]:before {
 	background-image: url("./archive.jpg");
 	background-size: 20px 20px;
-	display: inline-block;
-	//outline: 1px solid white;
 	width: 20px;
 	height: 20px;
-	vertical-align: middle;
 	mix-blend-mode: screen;
 }
 
 li a[href^="https://books.google.com/"]:before {
-	content: "";
 	background-image: url("./google-books.png");
 	background-size: 20px 20px;
-	display: inline-block;
-	//outline: 1px solid white;
 	width: 20px;
 	height: 20px;
-	vertical-align: middle;
 }
 
 li a[href^="https://babel.hathitrust.org/"]:before {
-	content: "";
 	background-image: url("./hathitrust.png");
 	background-size: 20px 20px;
-	display: inline-block;
-	//outline: 1px solid white;
 	width: 20px;
 	height: 20px;
-	vertical-align: middle;
 }
 
 li a[href^="https://www.jstor.org/"]:before {
-	content: "";
 	background-image: url("./jstor_16.png");
 	background-size: 16px 16px;
-	display: inline-block;
-	//outline: 1px solid white;
 	width: 16px;
 	height: 16px;
-	vertical-align: middle;
 }
 
 li a[href^="https://www.scribd.com/"]:before {
-	content: "";
 	background-image: url("./scribd.ico");
 	background-size: 16px 16px;
-	display: inline-block;
-	//outline: 1px solid white;
 	width: 16px;
 	height: 16px;
-	vertical-align: middle;
 }
 
 li a[href^="https://digitale-sammlungen.ulb.uni-bonn.de/"]:before {
-	content: "";
 	background-image: url("./uni-bonn.ico");
 	background-size: 16px 16px;
-	display: inline-block;
-	//outline: 1px solid white;
 	width: 16px;
 	height: 16px;
-	vertical-align: middle;
 }
 
 li a[href^="https://gallica.bnf.fr/"]:before {
-	content: "";
 	background-image: url("./bnf.ico");
 	background-size: 16px 16px;
-	display: inline-block;
-	//outline: 1px solid white;
 	width: 16px;
 	height: 16px;
-	vertical-align: middle;
 }
 
 #abbreviations .non-source {
-	//opacity: .2;
 	display: none;
 }
 
@@ -211,35 +175,37 @@ li a[href^="https://gallica.bnf.fr/"]:before {
 	padding-left: 0;
 }
 
-
 #abbreviations .bible {
 	display: none;
 }
 
-
-
 ul.dictionary {
-	display: none;
-	font-size: 1.5em;
-	font-family: rk_coptic, rk_greek;
-	//outline: 1px solid lightblue;
-	//background: #ffffff22;
-	padding-left: 1rem;
+	//display: none;
+	//font-size: 1.5em;
+	line-height: 1.5;
+	font-family: rk_coptic, rk_greek, rk_arabic, rk_sans-serif;
+	padding-left: 0rem;
 }
 
 li.entry {
-	//background: #ffffff22;
+	font-size: 2em;
 }
 
-li.entry > ul,
-li.entry > ul > li > ul {
-	//background: #ffffff22;
-	padding-left: 1rem;
+li.entry li {
+	list-style-type: none;
 }
 
-li.entry > ul > li,
-li.entry > ul > li > ul > li {
-	//background: #ffffff22;
+li.entry + li.entry {
+	margin-top: 1em;
+}
+
+li.entry li ul {
+	//padding-left: 0rem;
+	list-style-type: none;
+}
+
+li.entry li li {
+	font-size: .5em;
 }
 
 .headword {
@@ -248,6 +214,15 @@ li.entry > ul > li > ul > li {
 
 i.dialect {
 	color: violet;
+}
+
+i.dialect sup {
+	font-size: .5em;
+	position: relative;
+	vertical-align: unset;
+	bottom: 10px;
+	left: 3px;
+	padding-right: 5px;
 }
 
 i.dialect span {
