--- a/coptic/crum/styles/styles.css
+++ b/coptic/crum/styles/styles.css
@@ -66,17 +66,9 @@ p sup a {
 }
 
 #additions_and_corrections ul,
-#list_of_abbreviations ul,
-#dictionary ul,
-#dictionary li {
+#list_of_abbreviations ul {
 	padding-left: .5em;
 	list-style-type: none;
-}
-
-#dictionary .headword {
-	color: violet;
-	font-family: rk_coptic;
-	font-size: 1.5em;
 }
 
 #list_of_abbreviations .abbr {
@@ -159,6 +151,15 @@ p sup a {
 	height: 16px;
 }
 
-ul#dictionary li.entry + li.entry {
-	margin-top: 1em;
+
+#dictionary .headword {
+	color: violet;
+	font-family: rk_coptic;
+	font-size: 1.5em;
+}
+
+#dictionary .entry .subsection {
+	outline: 1px dashed #ffffff44;
+	//margin: .5em 0 0 .5em;
+	background: #ffffff09;
 }
